--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 
 /*---------------------------------------
-    Typorgraphy              
+    Typorgraphy
 -----------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
   font-weight: 600;
@@ -32,7 +32,6 @@ h1 {
 
 h2 {
   font-size: 30px;
-  text-transform: uppercase;
 }
 
 h3 {
@@ -46,7 +45,7 @@ h5 {
 
 p {
     color: #707070;
-    font-size: 14px;
+    font-size: 22px;
     line-height: 24px;
 }
 
@@ -57,7 +56,7 @@ a {
 
 
 /*---------------------------------------
-    General               
+    General
 -----------------------------------------*/
 .section-title {
   margin-bottom: 32px;
@@ -70,9 +69,9 @@ a {
 }
 
 #detail, #video,
-#speakers, 
+#speakers,
 #program,
-#sponsors, 
+#sponsors,
 #contact, footer {
     padding-top: 10rem;
     padding-bottom: 10rem;
@@ -142,7 +141,7 @@ footer {
 
 
 /*---------------------------------------
-    Preloader section              
+    Preloader section
 -----------------------------------------*/
 .preloader {
   position: fixed;
@@ -190,7 +189,7 @@ footer {
 
 
 /*---------------------------------------
-    Navigation Links section              
+    Navigation Links section
 -----------------------------------------*/
 .custom-navbar {
     margin-bottom: 0;
@@ -247,7 +246,7 @@ footer {
     .custom-navbar {
         padding: 20px 0;
         border-bottom: 0;
-        background: 0 0; 
+        background: 0 0;
     }
     .custom-navbar.top-nav-collapse {
         background: #101010;
@@ -259,7 +258,7 @@ footer {
 
 
 /*---------------------------------------
-    Intro section              
+    Intro section
 -----------------------------------------*/
 #intro {
     background: url('../images/intro-bg.jpg') 50% 0 repeat-y fixed;
@@ -286,7 +285,7 @@ footer {
 
 
 /*---------------------------------------
-   Overview  section              
+   Overview  section
 -----------------------------------------*/
 #overview img {
   position: relative;
@@ -296,7 +295,7 @@ footer {
 
 
 /*---------------------------------------
-    Detail section              
+    Detail section
 -----------------------------------------*/
 #detail {
     background: #222;
@@ -311,7 +310,7 @@ footer {
 
 
 /*---------------------------------------
-    Video section              
+    Video section
 -----------------------------------------*/
 #video iframe {
   border: none;
@@ -320,7 +319,7 @@ footer {
 
 
 /*---------------------------------------
-   Speakers section              
+   Speakers section
 -----------------------------------------*/
 #speakers {
     background: #f9f9f9;
@@ -358,7 +357,7 @@ footer {
 
 
 /*---------------------------------------
-   Program section              
+   Program section
 -----------------------------------------*/
 #program h4 {
     color: #808080;
@@ -417,7 +416,7 @@ footer {
 
 
 /*---------------------------------------
-    Regsiter section              
+    Regsiter section
 -----------------------------------------*/
 #register {
     background: url('../images/register-bg.jpg') 50% 0 repeat-y fixed;
@@ -458,7 +457,7 @@ footer {
 
 
 /*---------------------------------------
-   Faq section              
+   Faq section
 -----------------------------------------*/
 #faq {
   background: #f9f9f9;
@@ -523,11 +522,11 @@ footer {
 
 
 /*---------------------------------------
-   Venue section              
+   Venue section
 -----------------------------------------*/
 #venue {
     background: url('../images/venue-bg.jpg') 50% 0 repeat-y fixed;
-    background-size: cover;
+    background-size: fixed;
     background-position: center center;
     padding-top: 7rem;
     padding-bottom: 7rem;
@@ -541,7 +540,7 @@ footer {
 
 
 /*---------------------------------------
-   Sponsors section              
+   Sponsors section
 -----------------------------------------*/
 #sponsors img {
   margin-top: 18px;
@@ -550,7 +549,7 @@ footer {
 
 
 /*---------------------------------------
-   Contact section              
+   Contact section
 -----------------------------------------*/
 #contact {
     background: url('../images/contact-bg.jpg') 50% 0 repeat-y fixed;
@@ -604,7 +603,7 @@ footer {
 
 
 /*---------------------------------------
-   Footer section              
+   Footer section
 -----------------------------------------*/
 footer {
   background-attachment: fixed;
@@ -636,7 +635,7 @@ footer {
 
 
 /*---------------------------------------
-   Social icon             
+   Social icon
 -----------------------------------------*/
 .social-icon {
     position: relative;
@@ -670,7 +669,7 @@ footer {
 
 
 /*---------------------------------------
-   Responsive styles            
+   Responsive styles
 -----------------------------------------*/
 @media (max-width: 980px) {
 
@@ -735,4 +734,3 @@ footer {
   }
 
 }
-
