--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body {
     Typorgraphy
 -----------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
-  font-weight: 600;
+  font-weight: 350;
+	font-size: 25px;
 }
 
 h3,h5 {
@@ -26,12 +27,14 @@ h3,h5 {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 65px;
     letter-spacing: 2px;
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 45px;
+	padding-top: 1px;
+	padding-bottom: 1px;
 }
 
 h3 {
@@ -205,8 +208,8 @@ footer {
 
 .custom-navbar .nav li a {
     color: #ddd;
-    font-size: 12px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 700;
     letter-spacing: 0.6px;
     text-transform: uppercase;
     line-height: 40px;
